Fixing spacing for news items

--- a/css/custom.css
+++ b/css/custom.css
@@ -36,6 +36,7 @@ body {
 }
 
 .news-item {
+    margin-top: 0px;
     padding: 0px 0px;
 }
 
